--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,15 +1,23 @@
 pipeline {
   agent any
  parameters {
-        string(name: 'name_container', defaultValue: 'proyecto-qa', description: 'nombre del docker')
-        string(name: 'name_imagen', defaultValue: 'iproyecto-qa', description: 'nombre de la imagen')
+        string(name: 'name_container', defaultValue: 'S3_Proyecto_01', description: 'nombre del docker')
+        string(name: 'name_imagen', defaultValue: 'iS3_Proyecto_01', description: 'nombre de la imagen')
         string(name: 'tag_imagen', defaultValue: 'latest', description: 'etiqueta de la imagen')
         string(name: 'puerto_imagen', defaultValue: '81', description: 'puerto a publicar')
     }
     environment {
+        DOCKERHUB_CREDENTIALS=credentials('dockerhub')
         name_final = "${name_container}${tag_imagen}${puerto_imagen}"        
     }
     stages {
+	        stage('gitclone') {
+
+			steps {
+				git 'https://github.com/luas16/S3_proyecto.git'
+			     }
+		    }
+		    
           stage('stop/rm') {
 
             when {
@@ -33,7 +41,7 @@ pipeline {
             steps {
                 script{
                     sh ''' 
-                    docker build    / -t ${name_imagen}:${tag_imagen}
+                    docker build -t ${name_imagen}:${tag_imagen}
                     '''
                     }
                     
