--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,8 +1,8 @@
 pipeline {
   agent any
  parameters {
-        string(name: 'name_container', defaultValue: 'S3_Proyecto_01', description: 'nombre del docker')
-        string(name: 'name_imagen', defaultValue: 'iS3_Proyecto_01', description: 'nombre de la imagen')
+        string(name: 'name_container', defaultValue: 'proyecto-qa', description: 'nombre del docker')
+        string(name: 'name_imagen', defaultValue: 'iproyecto-qa', description: 'nombre de la imagen')
         string(name: 'tag_imagen', defaultValue: 'latest', description: 'etiqueta de la imagen')
         string(name: 'puerto_imagen', defaultValue: '81', description: 'puerto a publicar')
     }
@@ -14,7 +14,7 @@ pipeline {
 	        stage('gitclone') {
 
 			steps {
-				git 'https://github.com/luas16/S3_proyecto.git'
+				git 'https://github.com/luas16/Calculadora_QA.git'
 			     }
 		    }
 		    
