--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,24 +18,24 @@ pipeline {
 			     }
 		    }
 		    
-          stage('stop/rm') {
+        //   stage('stop/rm') {
 
-            when {
-                expression { 
-                    DOCKER_EXIST = sh(returnStdout: true, script: 'echo "$(docker ps -q --filter name=${name_final})"').trim()
-                    return  DOCKER_EXIST != '' 
-                }
-            }
-            steps {
-                script{
-                    sh ''' 
-                         docker stop ${name_final}
-                    '''
-                    }
+        //     when {
+        //         expression { 
+        //             DOCKER_EXIST = sh(returnStdout: true, script: 'echo "$(docker ps -q --filter name=${name_final})"').trim()
+        //             return  DOCKER_EXIST != '' 
+        //         }
+        //     }
+        //     steps {
+        //         script{
+        //             sh ''' 
+        //                  docker stop ${name_final}
+        //             '''
+        //             }
                     
-                }                    
+        //         }                    
                                   
-            }
+        //     }
            
         stage('build') {
             steps {
