prueba docker build

--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,7 +41,7 @@ pipeline {
             steps {
                 script{
                     sh ''' 
-                    docker build -t ${name_imagen}:${tag_imagen}
+                    docker build -t thetips4you/nodeapp_test:latest .
                     '''
                     }
                     
